fix spacing, nav

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -6,6 +6,10 @@
 @import "./MobileTypography.scss";
 
 /************************* BASE ***************************/
+html {
+  overflow-x: hidden;
+}
+
 body, html {
   background-color: $bg;
   position: relative;
@@ -69,7 +73,7 @@ body, html {
 
   span {
     position: relative;
-    z-index: 1;
+    z-index: 2;
     pointer-events: none;
   }
 
@@ -133,7 +137,6 @@ body, html {
 
   .gradient {
     border: none;
-    transition: 0.5s;
     opacity: 1;
   }
 
@@ -317,7 +320,7 @@ body, html {
   position: relative;
   display: grid;
   grid-template-columns: 35% 10% 55%;
-  grid-template-rows: 30vw;
+  grid-template-rows: auto;
   background-color: #000;
   color: #fff;
   padding: 5vw 8vw;
@@ -599,4 +602,8 @@ ol {
 .signature {
   display: flex;
   align-items: center;
+
+  span {
+    display: flex;
+  }
 }
